Primer Commit desde VS Code

--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Practicando con Git</title>
 </head>
 <body>
     <h1>Git Desde Cero</h1>
     <p>ED Team</p>
-    <h2>Esta es la Rama Test</h2>
+    <section>
+        <h2>Esta es la Rama Test</h2>
+    </section>
+    <div>
+        <p>
+            Este es un cambio realizado desde VS code
+        </p>
+    </div>
+
 </body>
 </html>
